<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_done">

    <fragment
        android:id="@+id/nav_done"
        android:name="com.example.taskschedule.views.ui.home.HomeFragment"
        android:label="@string/menu_done"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.taskschedule.views.ui.gallery.GalleryFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.taskschedule.views.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />
</navigation>